# hello_mcp

./: README.md  client.py  main.py  pyproject.toml
