[project]
name = "hello-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "corn>=8",
    "httpx>=0.28.1",
    "mcp>=1.12.2",
    "mcp-server>=0.1.4",
    "requests>=2.32.4",
    "uv>=0.8.4",
    "uvicorn>=0.35.0",
]
